# os_lab_5

src/: CMakeLists.txt  dynamic.c  static.c
src/headers/: gcf.h  sin.h
src/lib/: euclid_gcf.c  naive_gcf.c  rectangle_sin.c  trapezoid_sin.c
